--- a/nextVpn/servers.conf
+++ b/nextVpn/servers.conf
@@ -1,6 +1,6 @@
-us="us3.cisadd2.com"               # United State
+us="s7250.uiadd.site"               # United State
 uk="uk2.cisadd2.com"               # United Kingdom
-nl="nl.cisadd2.com"                # Netherland
+nl="nl.uiadd.site"                # Netherland
 ca="ca.cisadd2.com"                # Canada
 fr="fr.cisadd2.com"                # France
 de="de.cisadd2.com"                # German
